name:               lemolpages
maintainer:         Leza Morais Lutonda (Lemol-C)
synopsis:           Lemol-C's Blog
description:        Minhas paginas
license:            MIT
category:           Blog
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.5.*
                  , data-default
  ghc-options:      -threaded
  default-language: Haskell2010
